--- a/Quantumult_X.conf
+++ b/Quantumult_X.conf
@@ -856,7 +856,7 @@ https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.Chin
 
 
 [rewrite_remote]
-https://gitlab.com/328902301/mylove/-/raw/main/ScriptsCrack.conf, tag=𝑺𝒄𝒓𝒊𝒑𝒕𝒔@𝑨𝒍𝒌𝒂𝒊𝒅, update-interval=172800, opt-parser=true, enabled=true
+https://raw.githubusercontent.com/328902301/QuantumultX/master/ScriptsCrack.conf, tag=𝑺𝒄𝒓𝒊𝒑𝒕𝒔@𝑨𝒍𝒌𝒂𝒊𝒅, update-interval=172800, opt-parser=true, enabled=true
 
 # https://raw.githubusercontent.com/Alex0510/Eric/master/surge/Module/revenucar.sgmodule, tag=𝑬𝒓𝒊𝒄@𝑨𝒍𝒆𝒙0510, update-interval=172800, opt-parser=true, enabled=true
 
