--- a/Quantumult_X.conf
+++ b/Quantumult_X.conf
@@ -737,7 +737,7 @@ host-suffix, xmkczs.com, 节点选择
 host-suffix, yingsx.com, direct
 
 # 腾讯大厦
-host-suffix, extshort.weixin.qq.com, 美国节点
+host-suffix, extshort.weixin.qq.com, 香港节点
 ip-asn, 132203, direct
 
 # 服务更新
