--- a/Quantumult_X.conf
+++ b/Quantumult_X.conf
@@ -1,7 +1,7 @@
 // ==UserScript==
 // @Name              𝑶𝒏𝒍𝒚 𝒇𝒐𝒓 𝒎𝒚𝒔𝒆𝒍𝒇
 // @Author            𝑨𝒍𝒌𝒂𝒊𝒅
-// @UpdateTime        2022/11/15 12:30
+// @UpdateTime        2022/11/16 12:30
 // @Explain           自用配置
 // @Attention         只更新流媒体检测相关脚本
 // @Function          请参考对应的注释或Tag
@@ -677,7 +677,7 @@ static=苹果系统, proxy, direct, reject, 节点选择, img-url=https://raw.gi
 
 url-latency-benchmark=网易音乐, resource-tag-regex=🍒|🍟|🍀|🌈|🌟, check-interval=100, tolerance=1, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netease_Music_Unlock.png
 
-url-latency-benchmark=自动选择, resource-tag-regex=😊|☀️|🌕|🍓, check-interval=100, tolerance=1, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Round_Robin.png
+url-latency-benchmark=自动选择, resource-tag-regex=😊|🌕, check-interval=100, tolerance=1, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Round_Robin.png
 
 static=节点选择, proxy, direct, reject, 自动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Baidu_Cloud.png
 
@@ -710,11 +710,7 @@ url-latency-benchmark=英国节点, server-tag-regex=(?=.*((?i)英|英国|英格
 
 
 [server_remote]
-https://bigairport.date/api/v1/client/subscribe?token=cb5bd7c94b6ade06b27ec4a2a7d09e08, tag=🍓, update-interval=172800, opt-parser=true, enabled=true
-
 https://my.dafeicnd.com/s/2k0ZAdVQ, tag=🌕, update-interval=172800, opt-parser=true, enabled=true
-
-https://xn--4gq62f52gdss.com/api/v1/client/subscribe?token=22164c26e99c86ca3bb443eeb78f3970, tag=☀️, update-interval=172800, opt-parser=true, enabled=true
 
 https://microsoft.download-config-bit.cyou/api/v1/client/subscribe?token=3752cf73875ef042687fe91cd6a78ea5#out=靠前+特殊&udp=1&tfo=1, tag=😊, update-interval=172800, opt-parser=true, enabled=true
 
