--- a/Quantumult_X.conf
+++ b/Quantumult_X.conf
@@ -16,7 +16,7 @@
 # [+]2022-03-01 01、QX小白配置2.0已全面更新，重点更新[rewrite_remote]内容  
 # [+]2022-03-15 02、QX配置头增加网易云解锁指导、图标库、IOS屏蔽更新、旧版文档、Crack腾讯文档  
 # [+]2022-03-26 03、增加[替换支付宝内淘票票评分为豆瓣评分]和[豆瓣添加便捷播放按钮&展示在映流媒体平台]  
-# [+]2022-03-30 04、增加墨鱼专属VIPcrack订阅[请自行添加hostname]  
+# [+]2022-03-30 04、增加专属VIPcrack订阅[请自行添加hostname]  
 # [+]2022-03-30 05、新增QX的GeoIP自动更新Url链接[内容见header]  
 # [+]2022-03-31 06、新增什么值得买APP去广告的引用@blackmatrix7  
 # [+]2022-04-04 07、增加@Orz-3的big和mini图标链接  
@@ -39,11 +39,10 @@
 # [+]2022-08-21 24、添加dprefer-doh3(doh-server = https://223.5.5.5/dns-query, https://223.6.6.6/dns-query)QX1.0.30+
 # [+]2022-09-19 25、将final分流绑定黑白名单policy，由用户自行选择直连或是代理，server_check_url响应地址改为http://www.gstatic.com/generate_204
 # [+]2022-09-29 26、直连分流替换为VirgilClyne 的ASN.China.list，添加不mimt抖音、ios天气、google的host；更换header图标说明
-# [+]2022-10-19 27、应群友邮件需求，墨鱼小白配置2.0中策略组新增自动选择，更新方法，可将policy部分进行替换
-# [+]2022-10-22 28、策略组tolerance调整，自动选择的策略组自动排除网易云节点，油管去广告换回墨鱼整理的
-# [+]2022-11-06 30、添加icloud、qq、tencent、weixin指定域名的DNS解析，并添加两个mitm域名排除
-# [-]2022-11-09 31、Zhuliyer仓库目前被封，尚不了解情况，暂时屏蔽。
-# [-]2022-11-13 32、删除QQ域名的DNS解析
+# [+]2022-10-22 27、策略组tolerance调整，自动选择的策略组自动排除网易云节点
+# [+]2022-11-06 28、添加icloud、qq、tencent、weixin指定域名的DNS解析，并添加两个mitm域名排除
+# [-]2022-11-09 29、Zhuliyer仓库目前被封，尚不了解情况，暂时屏蔽。
+# [-]2022-11-13 30、删除QQ域名的DNS解析
 
 # > 建议在「其他设置」里「GeoLite2」的「来源」填写使用下面链接，并开启「自动更新」
 # https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
