--- a/Quantumult_X.conf
+++ b/Quantumult_X.conf
@@ -676,7 +676,7 @@ static=苹果系统, proxy, direct, reject, 节点选择, img-url=https://raw.gi
 
 url-latency-benchmark=网易音乐, resource-tag-regex=🍒|🍟|🍀|🌈|🌟, check-interval=100, tolerance=1, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netease_Music_Unlock.png
 
-url-latency-benchmark=自动选择, resource-tag-regex=😊|🌕, check-interval=100, tolerance=1, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Round_Robin.png
+url-latency-benchmark=自动选择, resource-tag-regex=😊|🌕|☀️, check-interval=100, tolerance=1, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Round_Robin.png
 
 static=节点选择, proxy, direct, reject, 自动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Baidu_Cloud.png
 
@@ -709,6 +709,8 @@ url-latency-benchmark=英国节点, server-tag-regex=(?=.*((?i)英|英国|英格
 
 
 [server_remote]
+https://api.ndsxfkjfvhzdsfio.quest/link/WLqbZ4gSBENPH9ST?clash=3, tag=☀️, update-interval=172800, opt-parser=true, enabled=true
+
 https://my.dafeicnd.com/s/2k0ZAdVQ, tag=🌕, update-interval=172800, opt-parser=true, enabled=true
 
 https://microsoft.download-config-bit.cyou/api/v1/client/subscribe?token=3752cf73875ef042687fe91cd6a78ea5#out=靠前+特殊&udp=1&tfo=1, tag=😊, update-interval=172800, opt-parser=true, enabled=true
