--- a/Quantumult_X.conf
+++ b/Quantumult_X.conf
@@ -1,7 +1,7 @@
 // ==UserScript==
 // @Name              𝑶𝒏𝒍𝒚 𝒇𝒐𝒓 𝒎𝒚𝒔𝒆𝒍𝒇
 // @Author            𝑨𝒍𝒌𝒂𝒊𝒅
-// @UpdateTime        2022/11/16 12:30
+// @UpdateTime        2022/11/17 12:30
 // @Explain           自用配置
 // @Attention         只更新流媒体检测相关脚本
 // @Function          请参考对应的注释或Tag
@@ -709,7 +709,7 @@ url-latency-benchmark=英国节点, server-tag-regex=(?=.*((?i)英|英国|英格
 
 
 [server_remote]
-https://api.ndsxfkjfvhzdsfio.quest/link/WLqbZ4gSBENPH9ST?clash=3, tag=☀️, update-interval=172800, opt-parser=true, enabled=true
+https://xn--4gq62f52gdss.com/api/v1/client/subscribe?token=06462ccfebb0cddda650c75237d17fee, tag=☀️, update-interval=172800, opt-parser=true, enabled=true
 
 https://my.dafeicnd.com/s/2k0ZAdVQ, tag=🌕, update-interval=172800, opt-parser=true, enabled=true
 
