--- a/Quantumult_X.conf
+++ b/Quantumult_X.conf
@@ -1,7 +1,7 @@
 // ==UserScript==
 // @Name              𝑶𝒏𝒍𝒚 𝒇𝒐𝒓 𝒎𝒚𝒔𝒆𝒍𝒇
 // @Author            𝑨𝒍𝒌𝒂𝒊𝒅
-// @UpdateTime        2022/11/17 12:30
+// @UpdateTime        2022/11/19 12:30
 // @Explain           自用配置
 // @Attention         只更新流媒体检测相关脚本
 // @Function          请参考对应的注释或Tag
@@ -676,7 +676,7 @@ static=苹果系统, proxy, direct, reject, 节点选择, img-url=https://raw.gi
 
 url-latency-benchmark=网易音乐, resource-tag-regex=🍒|🍟|🍀|🌈|🌟, check-interval=100, tolerance=1, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netease_Music_Unlock.png
 
-url-latency-benchmark=自动选择, resource-tag-regex=😊|🌕|☀️, check-interval=100, tolerance=1, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Round_Robin.png
+url-latency-benchmark=自动选择, resource-tag-regex=😊|🌕|☀️|🍓, check-interval=100, tolerance=1, alive-checking=false, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Round_Robin.png
 
 static=节点选择, proxy, direct, reject, 自动选择, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Baidu_Cloud.png
 
@@ -709,6 +709,8 @@ url-latency-benchmark=英国节点, server-tag-regex=(?=.*((?i)英|英国|英格
 
 
 [server_remote]
+https://fuqing.ch/modules/servers/fuqingsocks/osubscribe.php?sid=6281&token=CYyvmrtWBhrT, tag=🍓, update-interval=172800, opt-parser=true, enabled=true
+
 https://xn--4gq62f52gdss.com/api/v1/client/subscribe?token=06462ccfebb0cddda650c75237d17fee, tag=☀️, update-interval=172800, opt-parser=true, enabled=true
 
 https://my.dafeicnd.com/s/2k0ZAdVQ, tag=🌕, update-interval=172800, opt-parser=true, enabled=true
