--- a/Quantumult_X.conf
+++ b/Quantumult_X.conf
@@ -734,6 +734,7 @@ https://ocd0522.tk/ddgksf2013/Cuttlefish/raw/branch/master/Server/Netease.list, 
 # 网页浏览
 host-suffix, xmkczs.com, 节点选择
 host-suffix, yingsx.com, direct
+host-suffix, qxnav.com, 节点选择
 
 # 腾讯大厦
 ip-asn, 132203, direct
