--- a/Quantumult_X.conf
+++ b/Quantumult_X.conf
@@ -1,15 +1,14 @@
 // ==UserScript==
 // @Name              𝑶𝒏𝒍𝒚 𝒇𝒐𝒓 𝒎𝒚𝒔𝒆𝒍𝒇
 // @Author            𝑨𝒍𝒌𝒂𝒊𝒅
-// @UpdateTime        2022/11/19 12:30 UTC/GMT +8
+// @UpdateTime        2022/11/20 12:30 UTC/GMT +8
 // @Explain           自用配置
 // @Attention         只更新流媒体检测相关脚本
 // @Function          请参考对应的注释或Tag
-// @MainFunction      广告、VIP、分流、图标、Boxjs订阅、IOS屏蔽更新、网易云解锁灰色
+// @MainFunction      广告、VIP、分流、图标、Boxjs订阅
 // @ScriptURL         摇光仓库
 // @ConfigVersion     3.0
 // @ExpressThanks     𝑮𝒊𝒕𝒉𝒖𝒃 𝑨𝒖𝒕𝒉𝒐𝒓𝒔
-// @ConfigURL         https://raw.githubusercontent.com/328902301/QuantumultX/master/Quantumult_X.conf
 // ==UserScript==
 
 
@@ -710,9 +709,9 @@ url-latency-benchmark=英国节点, server-tag-regex=(?=.*((?i)英|英国|英格
 
 
 [server_remote]
-https://fuqing.ch/modules/servers/fuqingsocks/osubscribe.php?sid=6281&token=CYyvmrtWBhrT, tag=🍓, update-interval=172800, opt-parser=true, enabled=true
+https://fuqing.ch/modules/servers/fuqingsocks/osubscribe.php?sid=6281&token=CYyvmrtWBhrT#out=Traffic+Expire&udp=1&tfo=1, tag=🍓, update-interval=172800, opt-parser=true, enabled=true
 
-https://xn--4gq62f52gdss.com/api/v1/client/subscribe?token=06462ccfebb0cddda650c75237d17fee, tag=☀️, update-interval=172800, opt-parser=true, enabled=true
+https://xn--4gq62f52gdss.com/api/v1/client/subscribe?token=06462ccfebb0cddda650c75237d17fee#out=订阅+一元&udp=1&tfo=1, tag=☀️, update-interval=172800, opt-parser=true, enabled=true
 
 https://my.dafeicnd.com/s/2k0ZAdVQ, tag=🌕, update-interval=172800, opt-parser=true, enabled=true
 
