--- a/Quantumult_X.conf
+++ b/Quantumult_X.conf
@@ -1,11 +1,11 @@
 // ==UserScript==
 // @Name              𝑶𝒏𝒍𝒚 𝒇𝒐𝒓 𝒎𝒚𝒔𝒆𝒍𝒇
 // @Author            𝑨𝒍𝒌𝒂𝒊𝒅
-// @UpdateTime        2022/11/20 12:30 UTC/GMT +8
+// @UpdateTime        2022/11/20/12:30/UTC/GMT
 // @Explain           自用配置
 // @Attention         只更新流媒体检测相关脚本
 // @Function          请参考对应的注释或Tag
-// @MainFunction      广告、VIP、分流、图标、Boxjs订阅
+// @MainFunction      广告、VIP、分流、图标
 // @ScriptURL         摇光仓库
 // @ConfigVersion     3.0
 // @ExpressThanks     𝑮𝒊𝒕𝒉𝒖𝒃 𝑨𝒖𝒕𝒉𝒐𝒓𝒔
