--- a/Quantumult_X.conf
+++ b/Quantumult_X.conf
@@ -1,7 +1,7 @@
 // ==UserScript==
 // @Name              𝑶𝒏𝒍𝒚 𝒇𝒐𝒓 𝒎𝒚𝒔𝒆𝒍𝒇
 // @Author            𝑨𝒍𝒌𝒂𝒊𝒅
-// @UpdateTime        2022/11/20/12:30/UTC/GMT
+// @UpdateTime        2022/11/20/12:30/UTC
 // @Explain           自用配置
 // @Attention         只更新流媒体检测相关脚本
 // @Function          请参考对应的注释或Tag
