--- a/ScriptsCrack.conf
+++ b/ScriptsCrack.conf
@@ -788,9 +788,9 @@ hostname = api.revenuecat.com, buy.itunes.apple.com, mb3admin.com, api.neuralpri
 #https://apps.apple.com/cn/app/id1387717110
 ^https:\/\/(api-\w+|xiaoshuo)\.wtzw\.com\/api\/v\d\/ url script-response-body https://raw.githubusercontent.com/I-am-R-E/QuantumultX/main/JavaScript/QiMaoXiaoShuo.js
 
-# 191 Filebox 解决闪退 @Alkaid
-#https://apps.apple.com/cn/app/id1558391784
-^https:\/\/firebaseremoteconfig\.googleapis\.com\/v1\/projects\/.* url script-response-body https://raw.githubusercontent.com/328902301/Script/myself/QuantumultX/Scripts/projects.js
+# 191 普通话学习-标准普通话发音水平测试软件 @WeeekWin
+#https://apps.apple.com/cn/app/id1037958811
+^https:\/\/api\.hcreator\.cn\/wapsPay\/Login\/pthTest\/v3\/getInfo\.do url script-response-body https://raw.githubusercontent.com/WeeekWin/QuanX/main/Crack/PuTongHuaTest.js
 
 # 192 咖映-虚拟直播助手，直播间换背景神器 @彭于晏
 #https://apps.apple.com/cn/app/id1571415315
